fix: Website footer extension

--- a/erpnext/public/scss/website.scss
+++ b/erpnext/public/scss/website.scss
@@ -86,3 +86,10 @@
 .place-order-container {
 	text-align: right;
 }
+
+.dokos-footer-extension {
+	.btn-outline-secondary {
+		padding: 0 1rem;
+	}
+
+}
