--- a/erpnext/templates/includes/footer/footer_extension.html
+++ b/erpnext/templates/includes/footer/footer_extension.html
@@ -1,5 +1,5 @@
 {% if not hide_footer_signup %}
-<div class="input-group">
+<div class="input-group mb-2 dokos-footer-extension">
 	<input type="text" class="form-control border-secondary"
 		id="footer-subscribe-email"
 		placeholder="{{ _('Your email address...') }}"
