--- a/erpnext/public/scss/website.scss
+++ b/erpnext/public/scss/website.scss
@@ -64,6 +64,12 @@
 	text-align: right;
 }
 
+.kb-card {
+	.card-body > .card-title {
+		line-height: 1.3;
+	}
+}
+
 .dokos-footer-extension {
 	.btn-outline-secondary {
 		padding: 0 1rem;
