chore: french translations

--- a/erpnext/templates/pages/cart.html
+++ b/erpnext/templates/pages/cart.html
@@ -60,7 +60,7 @@
 				</button>
 			{% else %}
 				<button class="btn btn-primary btn-request-for-quotation" type="button">
-					{{ _("Request for Quotation") }}
+					{{ _("Request for Quotation", context="Cart") }}
 				</button>
 			{% endif %}
 		</div>
