refactor: Item booking portal

--- a/erpnext/templates/generators/item/item_add_to_cart.html
+++ b/erpnext/templates/generators/item/item_add_to_cart.html
@@ -79,6 +79,7 @@
 		$('.page_content').on('click', '.item-booking-btn', function() {
 			const item_code = $(this).attr("data-item-code");
 			new erpnext.booking_dialog({
+				parentId: 'item-booking',
 				item: item_code
 			})
 		});
