--- a/erpnext/templates/generators/item/item.html
+++ b/erpnext/templates/generators/item/item.html
@@ -1,5 +1,9 @@
 {% extends "templates/web.html" %}
 
+{%- block head_include %}
+<link rel="stylesheet" href="/assets/css/website-calendar.min.css">
+{% endblock -%}
+
 {% block title %} {{ title }} {% endblock %}
 
 {% block breadcrumbs %}
@@ -10,16 +14,99 @@
 {% from "erpnext/templates/includes/macros.html" import product_image %}
 <div class="item-content">
 	<div class="product-page-content" itemscope itemtype="http://schema.org/Product">
-		<div class="row mb-5">
+		<div class="row mb-5 item-website-description">
 			{% include "templates/generators/item/item_image.html" %}
 			{% include "templates/generators/item/item_details.html" %}
 		</div>
 
+		<div id="item-booking">
+			<div class="calendar-card"></div>
+			<div class="calendar-sidebar"></div>
+		</div>
+
 		{% include "templates/generators/item/item_specifications.html" %}
 
-		{{ doc.website_content or '' }}
+		<div class="row item-website-content mt-5">
+			{{ doc.website_content or '' }}
+		</div>
 	</div>
 </div>
+{% endblock %}
+
+{% block style %}
+<style>
+	#item-booking {
+		width: 100%;
+		display: flex;
+		opacity: 0;
+		transition: opacity 1.5s;
+	}
+
+	#item-booking.fade {
+		opacity: 1;
+		transition: opacity 1.5s;
+	}
+
+	.calendar-card {
+		width: 100%;
+		padding: 15px;
+	}
+
+	.calendar-sidebar {
+		margin-left: 15px;
+		z-index: 1;
+	}
+
+	.formatted-price {
+		padding-top: 15px;
+	}
+
+	.sidebar-section {
+		margin: 15px 0;
+		padding: 0 15px;
+		border-left: 1px solid #6cd5e1;
+	}
+
+	.sidebar-card input[type="checkbox"],
+	.sidebar-card label span {
+		cursor: pointer;
+	}
+
+	.calendar-sidebar .form-group,
+	.calendar-sidebar .help-box,
+	.calendar-sidebar .label {
+		margin-bottom: 0;
+	}
+
+	#alternative-item {
+		margin-top: 0.75rem;
+	}
+
+	.fc .fc-closeButton-button {
+		color: #6cd5e1;
+		border-color: #6cd5e1;
+	}
+
+	.fc .fc-closeButton-button:hover {
+		background-color: #ffd98e;
+		border-color: #ffd98e;
+		color: #6cd5e1;
+	}
+
+	@media (max-width: 768px) {
+		#item-booking {
+			display: inline-block;
+		}
+
+		.sidebar-card {
+			display: flex;
+		}
+
+		.sidebar-section {
+			border: none;
+		}
+	}
+</style>
 {% endblock %}
 
 {% block base_scripts %}
