feat: Subscription portal wip

--- a/erpnext/templates/generators/item/item.html
+++ b/erpnext/templates/generators/item/item.html
@@ -59,11 +59,12 @@
 
 	.formatted-price {
 		padding-top: 15px;
+		white-space: nowrap;
 	}
 
 	.sidebar-section {
 		margin: 15px 0;
-		padding: 0 15px;
+		padding: 0 0 0 15px;
 		border-left: 1px solid #6cd5e1;
 	}
 
