--- a/erpnext/templates/pages/demo.html
+++ b/erpnext/templates/pages/demo.html
@@ -58,7 +58,7 @@ $(document).ready(function() {
 <div class='page-card'>
 
 	<div class='page-card-head'>
-		<span class='indicator blue'>
+		<span class='indicator-pill blue'>
 			{{ _("dokos Demo") }}</span>
 	</div>
 	<p>{{ _("Some functionality is disabled for the demo and the data will be cleared regularly.") }}</p>
