--- a/erpnext/templates/includes/item_booking_row.html
+++ b/erpnext/templates/includes/item_booking_row.html
@@ -1,23 +1,20 @@
-<div class="web-list-item transaction-list-item">
-	<div class="row py-4" id="{{ doc.name }}">
-		<div class="col-sm-6" style='margin-top: -3px;'>
-			{% set indicator = "red" if doc.status=="Cancelled" else "darkgrey" if doc.ends_on < frappe.utils.now_datetime() else "blue" if doc.status=="Confirmed" %}
-			<span class="indicator small {{ indicator }}">
-			{{ doc.item_name }}</span>
-			<div class="small text-muted status-field">
-				{{ doc.status }}
-			</div>
-			<div class="small text-muted transaction-time"
-				title="{{ frappe.utils.format_datetime(doc.starts_on, "medium") }}">
-				{{ frappe.utils.global_date_format(doc.starts_on) }}
-			</div>
+<div class="web-list-item transaction-list-item" id="{{ doc.name }}">
+	<div class="col-6" style='margin-top: -3px;'>
+		{% set indicator = "red" if doc.status=="Cancelled" else "darkgrey" if doc.ends_on < frappe.utils.now_datetime() else "blue" if doc.status=="Confirmed" else "orange" %}
+		<div class="small">{{ doc.item_name }}</div>
+		<span class="indicator-pill small status-field {{ indicator }}">
+			{{ _(doc.status) }}
+		</span>
+		<div class="small text-muted transaction-time"
+			title="{{ frappe.utils.format_datetime(doc.starts_on, "medium") }}">
+			{{ frappe.utils.global_date_format(doc.starts_on) }}
 		</div>
-		<div class="col-sm-3 text-muted">
-			{{  frappe.utils.get_time(doc.starts_on).strftime("%H:%M") }}-{{  frappe.utils.get_time(doc.ends_on).strftime("%H:%M") }}
-		</div>
-		<div class="col-3">
-			{% if doc.status != "Cancelled" and doc.starts_on > frappe.utils.now_datetime() and can_cancel %}<button class="btn btn-default cancel-booking">{{ _("Cancel") }}</button>{% endif %}
-		</div>
+	</div>
+	<div class="col-3 text-muted">
+		{{  frappe.utils.get_time(doc.starts_on).strftime("%H:%M") }}-{{  frappe.utils.get_time(doc.ends_on).strftime("%H:%M") }}
+	</div>
+	<div class="col-3">
+		{% if doc.status != "Cancelled" and doc.starts_on > frappe.utils.now_datetime() and can_cancel %}<button class="btn btn-default cancel-booking">{{ _("Cancel") }}</button>{% endif %}
 	</div>
 </div>
 
@@ -33,9 +30,9 @@ frappe.ready(function() {
 			$(".website-list #{{ doc.name }} .cancel-confirmation").hide()
 			const classes = ['darkgrey', 'blue', 'red']
 			classes.forEach(value => {
-				$(".website-list #{{ doc.name }} .indicator").removeClass(value)
+				$(".website-list #{{ doc.name }} .indicator-pill").removeClass(value)
 			})
-			$(".website-list #{{ doc.name }} .indicator").addClass('red')
+			$(".website-list #{{ doc.name }} .indicator-pill").addClass('red')
 			$(".website-list #{{ doc.name }} .status-field").text(__("Cancelled"))
 		})
 	}
