fix: Shopping cart

--- a/erpnext/templates/generators/item/item.html
+++ b/erpnext/templates/generators/item/item.html
@@ -35,6 +35,10 @@
 
 {% block style %}
 <style>
+	.item-website-description h1 {
+		margin: 2rem 0;
+	}
+
 	#item-booking {
 		width: 100%;
 		display: flex;
@@ -66,6 +70,10 @@
 		margin: 15px 0;
 		padding: 0 0 0 15px;
 		border-left: 1px solid #6cd5e1;
+	}
+
+	.sidebar-section .checkbox {
+		white-space: nowrap;
 	}
 
 	.sidebar-card input[type="checkbox"],
@@ -105,6 +113,7 @@
 
 		.sidebar-section {
 			border: none;
+			width: 100%;
 		}
 	}
 </style>
