--- a/erpnext/templates/includes/cart/cart_items.html
+++ b/erpnext/templates/includes/cart/cart_items.html
@@ -5,7 +5,7 @@
 			{{ d.item_name }}
 		</div>
 		<div>
-			{{ d.item_code }}
+			<a href="{{ d.route }}">{{ d.item_code }}</a>
 		</div>
 
 		{% if d.item_booking %}
