--- a/erpnext/templates/pages/subscription.html
+++ b/erpnext/templates/pages/subscription.html
@@ -10,7 +10,7 @@
 	<div class="available-plans card frappe-card hide"></div>
 	<div class="invoicing-status card frappe-card hide"></div>
 	<div class="cancellation-options card frappe-card hide"></div>
-	<div class="available-subscriptions card frappe-card hide"></div>
+	<div class="available-subscriptions hide"></div>
 </div>
 {% endblock %}
 
