refactor: Stripe payments integration

--- a/erpnext/templates/pages/integrations/stripe_checkout.css
+++ b/erpnext/templates/pages/integrations/stripe_checkout.css
@@ -111,3 +111,11 @@
 .field:-ms-input-placeholder {
   color: #CFD7E0;
 }
+
+#card-error {
+	color: #fa755a;
+}
+
+.stripe-image {
+	max-height: 300px;
+}
