--- a/erpnext/templates/pages/subscription.html
+++ b/erpnext/templates/pages/subscription.html
@@ -19,7 +19,7 @@
 .subscriptions-section,
 .subscriptions-section-title,
 .subscription-subtitle {
-	margin: 1.5rem 0;
+	margin: 0 0 1.5rem 0;
 }
 
 .current-subscription,
