feat: Possibility to delete item bookings from the calendar

--- a/erpnext/templates/generators/item/item.html
+++ b/erpnext/templates/generators/item/item.html
@@ -76,6 +76,10 @@
 		white-space: nowrap;
 	}
 
+	.sidebar-section .remove-slot {
+		cursor: pointer;
+	}
+
 	.sidebar-card input[type="checkbox"],
 	.sidebar-card label span {
 		cursor: pointer;
