--- a/erpnext/templates/includes/transaction_row.html
+++ b/erpnext/templates/includes/transaction_row.html
@@ -1,6 +1,6 @@
 <a href="/{{ pathname }}/{{ doc.name }}" class="web-list-item transaction-list-item">
 	<div class="col-sm-4" style='margin-top: -3px;'>
-		<span class="indicator-pill small {{ doc.indicator_color or ("blue" if doc.docstatus==1 else "darkgrey") }}">
+		<span class="indicator-pill small {{ doc.indicator_color or ("blue" if doc.docstatus==1 else "darkgray") }}">
 		{{ doc.name }}</span>
 		<div class="small text-muted transaction-time"
 			title="{{ frappe.utils.format_datetime(doc.modified, "medium") }}">
