--- a/erpnext/templates/pages/rfq.html
+++ b/erpnext/templates/pages/rfq.html
@@ -76,13 +76,13 @@
 						{% for d in doc.rfq_links %}
 							<div class="web-list-item transaction-list-item quotations" idx="{{d.name}}">
 								<div class="col-sm-6">
-									<span class="indicator darkgrey">{{d.name}}</span>
+									<span class="indicator darkgray">{{d.name}}</span>
 								</div>
 								<div class="col-sm-3">
-									<span class="small darkgrey">{{d.status}}</span>
+									<span class="small darkgray">{{d.status}}</span>
 								</div>
 								<div class="col-sm-3">
-									<span class="small darkgrey">{{d.transaction_date}}</span>
+									<span class="small darkgray">{{d.transaction_date}}</span>
 								</div>
 								<a class="transaction-item-link" href="/quotations/{{d.name}}">Link</a>
 							</div>
