--- a/erpnext/templates/generators/item/item_add_to_cart.html
+++ b/erpnext/templates/generators/item/item_add_to_cart.html
@@ -29,8 +29,8 @@
 			{% endif %}
 		</div>
 		{% endif %}
-		{% if product_info.price and (cart_settings.allow_items_not_in_stock or product_info.in_stock) %}
 		<div class="mt-3">
+			{% if product_info.price and (cart_settings.allow_items_not_in_stock or product_info.in_stock) %}
 			<a href="/cart"
 				class="btn btn-light btn-view-in-cart {% if not product_info.qty %}hidden{% endif %}"
 				role="button"
@@ -45,6 +45,7 @@
 			{% if enable_item_booking %}{{ _("Buy units") }}{% else %}{{ _("Add to Cart") }}{% endif %}
 			</button>
 			{% endif %}
+			{% endif %}
 			{% if enable_item_booking %}
 			<button
 				data-item-code="{{item_code}}"
@@ -53,8 +54,10 @@
 				{{ _("Select a slot") }}
 			</button>
 			{% endif %}
+			{% if cart_settings.show_contact_us_button %}
+				{% include "templates/generators/item/item_inquiry.html" %}
+			{% endif %}
 		</div>
-		{% endif %}
 	</div>
 </div>
 
