fix: Move dashboard to erpnext + project js

--- a/erpnext/templates/pages/projects.html
+++ b/erpnext/templates/pages/projects.html
@@ -85,6 +85,7 @@
 <script>
 	{% include "frappe/public/js/frappe/provide.js" %}
 	{% include "frappe/public/js/frappe/form/formatters.js" %}
+	{% include "templates/pages/projects.js" %}
 </script>
 
 {% endblock %}
