feat: Portal UI enhancement

--- a/erpnext/templates/generators/item/item.html
+++ b/erpnext/templates/generators/item/item.html
@@ -19,7 +19,7 @@
 			{% include "templates/generators/item/item_details.html" %}
 		</div>
 
-		<div id="item-booking">
+		<div id="item-booking" class="portal-calendar">
 			<div class="calendar-card"></div>
 			<div class="calendar-sidebar"></div>
 		</div>
@@ -59,6 +59,7 @@
 	.calendar-sidebar {
 		margin-left: 15px;
 		z-index: 1;
+		min-width: 8rem;
 	}
 
 	.formatted-price {
