--- a/erpnext/templates/pages/cart.html
+++ b/erpnext/templates/pages/cart.html
@@ -18,7 +18,7 @@
 
 {% from "templates/includes/macros.html" import item_name_and_description %}
 
-<div class="cart-container">
+<div class="cart-container frappe-card">
 	<div id="cart-error" class="alert alert-danger" style="display: none;"></div>
 
 	{% if doc.items %}
