--- a/erpnext/templates/pages/integrations/stripe_checkout.html
+++ b/erpnext/templates/pages/integrations/stripe_checkout.html
@@ -20,7 +20,7 @@
 	<div class="col-12">
 		<h2 class="text-center">{{description}}</h2>
 		<form id="payment-form">
-			<div class="card frappe-card">
+			<div class="frappe-card">
 				<div class="form-group">
 					<label>
 						<span>{{ _("Name") }}</span>
