--- a/erpnext/templates/pages/order.html
+++ b/erpnext/templates/pages/order.html
@@ -8,7 +8,7 @@
 {% block title %}{{ doc.name }}{% endblock %}
 
 {% block header %}
-	<h1 class="m-0">{{ doc.name }}</h1>
+	<h2>{{ doc.name }}</h2>
 {% endblock %}
 
 {% block header_actions %}
@@ -61,7 +61,7 @@
 {{ doc._header }}
 {% endif %}
 
-<div class="order-container card frappe-card">
+<div class="order-container frappe-card">
 
 	<!-- items -->
 	<div class="order-item-table">
