--- a/erpnext/public/scss/website.scss
+++ b/erpnext/public/scss/website.scss
@@ -1,6 +1,6 @@
 // General
 body {
-	background-color: var(--bg-color);
+	background-color: $body-bg;
 }
 
 // Sidebar
@@ -37,10 +37,10 @@ a:not([href]).btn-light {
 			color: white;
 			padding: 0 1rem;
 			border: 1px solid;
-			border-radius: 0 var(--border-radius) var(--border-radius) 0;
+			border-radius: 0 $border-radius $border-radius 0;
 		}
 		#footer-subscribe-email {
-			border-radius: var(--border-radius) 0 0 var(--border-radius);
+			border-radius: $border-radius 0 0 $border-radius;
 		}
 	}
 	
@@ -122,6 +122,6 @@ a:not([href]).btn-light {
 // Blog
 .blog-card .card {
 	border: none;
-	box-shadow: var(--card-shadow);
-	border-radius: var(--border-radius-md);
+	box-shadow: $card-shadow;
+	border-radius: $border-radius-md;
 }
