fix: Item dashboard

--- a/erpnext/public/less/erpnext.less
+++ b/erpnext/public/less/erpnext.less
@@ -38,7 +38,9 @@
 }
 
 .dashboard-list-item {
-	background-color: inherit;
+	background-color: var(--card-bg);
+	margin: 1px 0;
+	box-shadow: var(--card-shadow);
 	border-bottom: 1px solid var(--border-color);
 	font-size: var(--text-md);
 	color: var(--text-color);
