--- a/erpnext/templates/pages/order.html
+++ b/erpnext/templates/pages/order.html
@@ -83,7 +83,7 @@
 			</div>
 			<div class="col-sm-3 col-3 text-right">
 				{{ d.qty }}
-				{% if d.delivered_qty is defined and d.delivered_qty != None %}
+				{% if not doc.skip_delivery_note and d.delivered_qty is defined and d.delivered_qty != None %}
 				<p class="text-muted small">{{ _("Delivered") }}&nbsp;{{ d.delivered_qty }}</p>
 				{% endif %}
 			</div>
@@ -107,7 +107,7 @@
 	or (doc.doctype=="Sales Invoice" and doc.outstanding_amount > 0)) %}
 
 	{% if available_loyalty_points %}
-		<div class="frappe-card card mt-3">
+		<div class="frappe-card mt-3">
 			<div class="card-body">
 				<h5 class="card-title">{{ _("Redeem loyalty points") }}</h5>
 				<div class="control-input-wrapper">
@@ -120,7 +120,7 @@
 		  </div>
 	{% endif %}
 
-	<div class="frappe-card card mt-3">
+	<div class="frappe-card mt-3">
 		<div class="card-body">
 			<h5 class="card-title">{{ _("Payment") }}</h5>
 			<p id="loyalty-points-status"></p>
