fix: item template

--- a/erpnext/templates/generators/item/item.html
+++ b/erpnext/templates/generators/item/item.html
@@ -13,7 +13,7 @@
 {% block page_content %}
 {% from "erpnext/templates/includes/macros.html" import product_image %}
 <div class="item-content">
-	<div class="product-page-content" itemscope itemtype="http://schema.org/Product">
+	<div class="product-page-content mb-5" itemscope itemtype="http://schema.org/Product">
 		<div class="row mb-5 item-website-description">
 			{% include "templates/generators/item/item_image.html" %}
 			{% include "templates/generators/item/item_details.html" %}
