--- a/erpnext/public/js/templates/booking_credit_dashboard.html
+++ b/erpnext/public/js/templates/booking_credit_dashboard.html
@@ -1,56 +1,52 @@
 <div class="booking-credit-dashboard">
 	<h6 style="margin-bottom: 25px;">{{ __("Balance for {0} on {1}", [customer, frappe.datetime.global_date_format(date)]) }}</h6>
 	{% for d in balance %}
-	<div class="row">
-		<div class="col-xs-4">
-			<p class="small" data-uom="{{ d.uom || "" }}">
-				{{ d.uom || "" }}</p>
-		</div>
-		<div class="col-xs-8">
-			<span class="inline-graph">
-				<span class="inline-graph-half">
-					{% if flt(d.balance) <= 0 %}
-						<span class="inline-graph-count">
-							{{ __("{0} {1}", [flt(d.balance, 2), d.uom]) }}
-						</span>
-						<span class="inline-graph-bar">
-							<span class="inline-graph-bar-inner warn"
-								style="width: {{ Math.min(Math.abs(cint(d.balance/max_count * 100)), 100) }}%">
+		{% if flt(d.balance) != 0.0 %}
+		<div class="row">
+			<div class="col-xs-4">
+				<p class="small" data-uom="{{ d.uom || "" }}" data-item="{{ d.item || ""}}">{{ d.item || ""}} - {{ d.uom || "" }}</p>
+				{% if d.conversions.length %}
+				<div>
+					<p class="small">{{ __("Convert minutes into:") }}</p>
+					{% for u in d.conversions %}
+						<button class="btn btn-default uom-reconciliation-btn" data-uom="{{ u.uom }}" data-customer="{{ customer }}" data-target-item="{{ u.item }}" data-source-item="{{ d.item }}">{{ u.qty}} {{u.uom}} - {{ u.item }}</button>
+					{% endfor %}
+				</div>
+				{% endif %}
+			</div>
+			<div class="col-xs-8">
+				<span class="inline-graph">
+					<span class="inline-graph-half">
+						{% if flt(d.balance) <= 0 %}
+							<span class="inline-graph-count">
+								{{ __("{0} {1}", [flt(d.balance, 2), d.uom]) }}
 							</span>
-						</span>
-					{% endif %}
-				</span>
-				<span class="inline-graph-half" title="{{ __("Credits") }}">
-					{% if flt(d.balance) > 0 %}
-						<span class="inline-graph-count">
-							{{ __("{0} {1}", [flt(d.balance, 2), d.uom]) }}
-						</span>
-						<span class="inline-graph-bar">
-							<span class="inline-graph-bar-inner dark"
-								style="width: {{ cint(d.balance/max_count * 100) }}%">
+							<span class="inline-graph-bar">
+								<span class="inline-graph-bar-inner warn"
+									style="width: {{ Math.min(Math.abs(cint(d.balance/max_count * 100)), 100) }}%">
+								</span>
 							</span>
-						</span>
-					{% endif %}
+						{% endif %}
+					</span>
+					<span class="inline-graph-half" title="{{ __("Credits") }}">
+						{% if flt(d.balance) > 0 %}
+							<span class="inline-graph-count">
+								{{ __("{0} {1}", [flt(d.balance, 2), d.uom]) }}
+							</span>
+							<span class="inline-graph-bar">
+								<span class="inline-graph-bar-inner dark"
+									style="width: {{ cint(d.balance/max_count * 100) }}%">
+								</span>
+							</span>
+						{% endif %}
+					</span>
 				</span>
-			</span>
+			</div>
 		</div>
-	</div>
+		{% endif %}
 	{% endfor %}
 
-	{% if reconciliation_uoms.length %}
-	<div class="row mb-2">
-		<div class="col-xs-4">
-			<p class="small">{{ __("Convert minutes into:") }}</p>
-		</div>
-		<div class="col-xs-8">
-			{% for u in reconciliation_uoms %}
-			<button class="btn btn-default uom-reconciliation-btn" data-uom="{{ u }}" data-customer="{{ customer }}">{{ u }}</button>
-			{% endfor %}
-		</div>
-	</div>
-	{% endif %}
-
-	{% if !Object.keys(balance).length %}
+	{% if !Object.keys(balance).length || (Object.keys(balance).length == 1.0 && balance[0].balance == 0.0)%}
 	<div class="col-xs-8">
 		<span class="inline-graph">
 			<span class="inline-graph-half">
