fix: Additional notes in cart

--- a/erpnext/public/scss/website.scss
+++ b/erpnext/public/scss/website.scss
@@ -95,6 +95,12 @@ a:not([href]).btn-light {
 	text-align: right;
 }
 
+.cart-items {
+	.cart-btn {
+		padding: .38rem 1rem;
+	}
+}
+
 // Address
 .address-card {
 	cursor: pointer;
