--- a/erpnext/public/scss/website.scss
+++ b/erpnext/public/scss/website.scss
@@ -132,3 +132,10 @@ a:not([href]).btn-light {
 	box-shadow: $card-shadow;
 	border-radius: $border-radius-md;
 }
+
+// Grid
+.grid-buttons {
+	.btn {
+		color: var(--text-color);
+	}
+}
